@@ -1,6 +1,7 @@
 @file:OptIn(ExperimentalWasmDsl::class)
 
 import com.android.build.api.dsl.ApplicationExtension
+import com.codingfeline.buildkonfig.compiler.FieldSpec
 import com.codingfeline.buildkonfig.compiler.FieldSpec.Type.STRING
 import org.jetbrains.compose.desktop.application.dsl.TargetFormat
 import org.jetbrains.kotlin.gradle.ExperimentalWasmDsl
@@ -26,21 +27,11 @@ kotlin {
         }
     }
 
-    listOf(
-        iosArm64(),
-        iosSimulatorArm64()
-    ).forEach { iosTarget ->
-        iosTarget.binaries.framework {
-            baseName = "ComposeApp"
-            isStatic = true
+
+    jvm("desktop") {
+        compilerOptions {
+            jvmTarget.set(JvmTarget.JVM_11)
         }
-    }
-
-    jvm()
-
-    js {
-        browser()
-        binaries.executable()
     }
 
     wasmJs {
@@ -49,17 +40,15 @@ kotlin {
     }
 
     sourceSets {
+
         androidMain.dependencies {
             implementation(libs.kotlinx.coroutines.android)
             implementation(libs.compose.uiToolingPreview)
             implementation(libs.androidx.activity.compose)
             implementation(libs.ktor.client.android)
-            implementation(libs.decompose)
-//            implementation(libs.ktor.client.okhttp)
 
         }
         commonMain.dependencies {
-            implementation(libs.ktor.client.core)
             implementation(libs.kotlinx.coroutines.core)
             implementation(libs.compose.runtime)
             implementation(libs.compose.foundation)
@@ -90,50 +79,50 @@ kotlin {
             implementation(libs.essentyLifecycleCoroutines)
 
             //Logger
-            implementation("io.github.kdroidfilter:kmplog:0.6.2")
+            implementation(libs.klf)
             //Coil
             implementation(libs.bundles.coil)
+            //Webvieuw MultiPlatofrm
+            api("io.github.kevinnzou:compose-webview-multiplatform:2.0.3")
         }
         commonTest.dependencies {
             implementation(libs.kotlin.test)
             implementation(libs.koin.test)
         }
-        jvmMain.dependencies {
+        sourceSets["desktopMain"].dependencies {
+            implementation(libs.slf4j.simple)
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutinesSwing)
             implementation(libs.ktor.client.cio)
-            // Logger
-
-
+            implementation("io.github.kevinnzou:compose-webview-multiplatform-desktop:2.0.3")
         }
-        iosMain.dependencies {
-            implementation(libs.ktor.client.darwin)
-        }
+
         wasmJsMain.dependencies {
+            implementation(libs.slf4j.simple)
             implementation(libs.ktor.client.wasm)
         }
-//        sourceSets["commonMain"].kotlin.srcDirs(
-//            File(
-//                layout.buildDirectory.get().asFile.path,
-//                "generated/compose/resourceGenerator/kotlin/commonCustomResClass"
-//            )
-//        )
+
     }
 }
 buildkonfig {
     packageName = "com.ivarvisser.cineapp"
 
-// Default values (usually for development)
     defaultConfigs {
+        buildConfigField(FieldSpec.Type.BOOLEAN, "IS_DEBUG", "true")
         buildConfigField(STRING, "BASE_URL", "acc-cinenetapi.ivarvisser.nl")
-//        val apiKey = project.findProperty("API_KEY")?.toString() ?: "fallback_key"
-//        buildConfigField(STRING, "API_KEY", "\"$apiKey\"")
+        buildConfigField(STRING, "PROTOCOL", "HTTPS")
     }
 
-// Release specific values
     targetConfigs {
+        create("staging") {
+            buildConfigField(FieldSpec.Type.BOOLEAN, "IS_DEBUG", "true")
+            buildConfigField(STRING, "BASE_URL", "acc-cinenetapi.ivarvisser.nl")
+            buildConfigField(STRING, "PROTOCOL", "HTTPS")
+        }
         create("release") {
+            buildConfigField(FieldSpec.Type.BOOLEAN, "IS_DEBUG", "false")
             buildConfigField(STRING, "BASE_URL", "prod-cinenetapi.ivarvisser.nl")
+            buildConfigField(STRING, "PROTOCOL", "HTTPS")
         }
     }
 }
@@ -152,6 +141,20 @@ extensions.configure<ApplicationExtension> {
         targetSdk = libs.versions.android.targetSdk.get().toInt()
         versionCode = 1
         versionName = "1.0"
+    }
+    flavorDimensions.add("environment")
+    productFlavors {
+        create("development") {
+            dimension = "environment"
+            applicationIdSuffix = ".dev"
+        }
+        create("staging") {
+            dimension = "environment"
+            applicationIdSuffix = ".staging"
+        }
+        create("production") {
+            dimension = "environment"
+        }
     }
     packaging {
         resources {
@@ -181,6 +184,16 @@ compose.desktop {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
             packageName = "com.ivarvisser.cineapp"
             packageVersion = "1.0.0"
+        }
+        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+        jvmArgs(
+            "--add-opens",
+            "java.desktop/java.awt.peer=ALL-UNNAMED"
+        ) // recommended but not necessary
+
+        if (System.getProperty("os.name").contains("Mac")) {
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
         }
     }
 }
